fix(theme): add data theme in wrap

--- a/packages/react/src/switch/src/styles/index.module.scss
+++ b/packages/react/src/switch/src/styles/index.module.scss
@@ -14,7 +14,6 @@
   @include theme.define-var(
     (
       background-color: theme.get-color("neutral", "300"),
-      border-color: theme.get-color("neutral", "300"),
     )
   );
 
@@ -55,7 +54,6 @@
     width: theme.get-var(width);
     height: theme.get-var(height);
     background-color: theme.get-var(background-color);
-    border: 1px solid theme.get-var(border-color);
     border-radius: theme.get-var(radius);
 
     @include theme.transition((background-color, border));
@@ -70,7 +68,7 @@
       content: "";
       background-color: white;
       border-radius: theme.get-var(radius);
-      transform: translate(1px, -50%);
+      transform: translate(2px, -50%);
       transform-origin: 0 0;
 
       @include theme.transition(transform);
@@ -100,7 +98,6 @@
         @include theme.define-var(
           (
             background-color: theme.get-color($value),
-            border-color: theme.get-color($value),
           )
         );
 
